# abaco

./: .gitignore  Makefile.am  autogen.sh  configure.ac
src/: Makefile.am
src/backend/: .gitignore  Makefile.am  compiler.vala  lexer.vala  parser.vala  token.vala
src/backend/asm/: builder.vala
src/backend/ast/: assign.vala  cast.vala  concrete.vala  conditional.vala  constant.vala  debug.vala  function.vala  global.vala  ifelse.vala  invoke.vala  list.vala  named.vala  node.vala  operation.vala  profile.vala  return.vala  rvalue.vala  scope.vala  typed.vala  unique.vala  variable.vala  while.vala
src/backend/lexer/: lexer.vala  token.vala  tokenclass.vala  tokens.vala  tokentype.vala
src/backend/parser/: annotate.vala  error.vala  operators.vala  parser.vala  rvalue.vala  scopeflag.vala  space.vala  tree.vala  unique.vala  walk.vala  walker.vala
src/backend/types/: arch.vala  bigint.vala  checks.vala  indp.vala  type.vala
src/backend/vapi/: patch.vapi
src/frontend/: .gitignore  Makefile.am  main.cpp  main.vala
